@@ -2,6 +2,7 @@ Alpha 0.015
 -----------
 * Namespaces
 * Export
+* Fixed ASI bug with return statements and debug lines
 
 8/15/12 - Alpha 0.014.1
 -----------
